@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6690 2004/07/26 23:29:07 schmonz Exp $
+$NetBSD: CHANGES,v 1.6691 2004/07/27 02:30:29 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -3585,3 +3585,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated gkrellm-xmms to 2.1.20 [cube 2004-07-26]
 	Updated asapm to 2.11nb3 [wiz 2004-07-26]
 	Added mess822-0.58 [schmonz 2004-07-26]
+	Updated clamsmtp to 0.4 [xtraeme 2004-07-27]
